stack-02-private-rt-subnets.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Create Private subnets for DemoApp

Parameters:

#
# Parameters
#
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.nano
      - t2.micro
    Description: Enter t2.micro or t2.nano. Default is t2.micro.

  KeyPair:
    Description: 'SSH KeyPair choise.'
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: 'fr_demo'

  ParentStackName:
    Description: 'ParentStackName must be set for proper variables inheritance from previous stacks.'
    Type: String

Resources:

#
# Private Route Table + Subnets configuration
#
  PrivateRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: {'Fn::ImportValue': !Sub '${ParentStackName}-VPCID'}
      Tags:
      - Key: Name
        Value: demo-private-rt

  SecurityGroupNATGW:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: {'Fn::ImportValue': !Sub '${ParentStackName}-VPCID'}
      GroupName: 'SG-NATGW'
      GroupDescription: Enable SSH via port 22
      SecurityGroupIngress:
        IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 10.20.0.0/20

  NatGWEC2:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: 't2.micro'
      ImageId: 'ami-0469bb6b'
      KeyName: !Ref KeyPair
      SourceDestCheck: 'false'
      Tags:
        - Key: Name
          Value: nat-gw
      NetworkInterfaces:
        - GroupSet:
            - !Ref SecurityGroupNATGW
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: {'Fn::ImportValue': !Sub '${ParentStackName}-PublicSubnetAID'}

  PrivateSubnetDefaultRoute:
    DependsOn: {'Fn::ImportValue': !Sub '${ParentStackName}-InternetGatewayAttachmentID'}
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref PrivateRT
      InstanceId: !Ref NatGWEC2
  PrivateSubnetDefaultIpv6Route:
    Type: AWS::EC2::Route
    Properties:
      DestinationIpv6CidrBlock: ::/0
      RouteTableId: !Ref PrivateRT
      EgressOnlyInternetGatewayId: {'Fn::ImportValue': !Sub '${ParentStackName}-EgressOnlyInternetGatewayID'}

  NATGWEIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      InstanceId: !Ref NatGWEC2

  PrivateSubnetA:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: {'Fn::ImportValue': !Sub '${ParentStackName}-VPCID'}
      CidrBlock: 10.20.3.0/24
      AvailabilityZone: eu-central-1a
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: demo-private-subnet-a
  PrivateSubnetARTAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRT
      SubnetId: !Ref PrivateSubnetA

  PrivateSubnetB:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: {'Fn::ImportValue': !Sub '${ParentStackName}-VPCID'}
      CidrBlock: 10.20.4.0/24
      AvailabilityZone: eu-central-1b
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: demo-private-subnet-b
  PublicSubnetBRTAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRT
      SubnetId: !Ref PrivateSubnetB
